--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "alertifyjs": "^1.13.1",
+    "emoji-picker-react": "^4.9.2",
     "moment": "^2.30.1",
     "nodemailer": "^6.9.13",
     "react": "^18.2.0",
